--- a/YPImagePicker.xcodeproj/xcshareddata/xcschemes/Fusuma.xcscheme
+++ b/YPImagePicker.xcodeproj/xcshareddata/xcschemes/Fusuma.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "52412A921CA6114A0073C4BE"
-               BuildableName = "Fusuma.framework"
-               BlueprintName = "Fusuma"
-               ReferencedContainer = "container:Fusuma.xcodeproj">
+               BuildableName = "YPImagePicker.framework"
+               BlueprintName = "YPImagePicker"
+               ReferencedContainer = "container:YPImagePicker.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -46,9 +46,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "52412A921CA6114A0073C4BE"
-            BuildableName = "Fusuma.framework"
-            BlueprintName = "Fusuma"
-            ReferencedContainer = "container:Fusuma.xcodeproj">
+            BuildableName = "YPImagePicker.framework"
+            BlueprintName = "YPImagePicker"
+            ReferencedContainer = "container:YPImagePicker.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -64,9 +64,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "52412A921CA6114A0073C4BE"
-            BuildableName = "Fusuma.framework"
-            BlueprintName = "Fusuma"
-            ReferencedContainer = "container:Fusuma.xcodeproj">
+            BuildableName = "YPImagePicker.framework"
+            BlueprintName = "YPImagePicker"
+            ReferencedContainer = "container:YPImagePicker.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
