--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,4 +3,6 @@ disabled_rules:
 - variable_name
 - force_cast
 - type_body_length
-- line_length
+- function_body_length
+# - file_length
+- cyclomatic_complexity
