--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,8 +1,7 @@
 disabled_rules:
 - trailing_whitespace
 - variable_name
-- force_cast
 - type_body_length
 - function_body_length
-# - file_length
+- file_length
 - cyclomatic_complexity
